# CPP_Programming

CSV_parser/: 1.txt  CMakeLists.txt  description.txt  input.txt  main.cpp  output.csv
game/: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  Gamer.cpp  Gamer.h  check  description.txt  main.cpp
parser/: CMakeLists.txt  DumpWorker.cpp  DumpWorker.h  GrepWorker.cpp  GrepWorker.h  ReaderWorker.cpp  ReaderWorker.h  ReplaceWorker.cpp  ReplaceWorker.h  SortWorker.cpp  SortWorker.h  WriteWorker.cpp  WriteWorker.h  description.txt  factory.cpp  factory.h  lab2  main.cpp  myException.cpp  myException.h  parser.cpp  parser.h  scheme.cpp  scheme.h  tests.cpp  validator.cpp  validator.h  worker.cpp  worker.h
parser/tests/: copy1.txt  copy2.txt  in1.txt  out1.txt  scheme1.txt
tritset/: CMakeCache.txt  CMakeLists.txt  Makefile  bites_oper  cmake_install.cmake  description.txt  lab_1.cbp  main.cpp  runTests  tests.cpp  tritset  tritset.cpp
